# tmux-gateway

./: .dockerignore  .env.dev  .env.example  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  cspell.json  deny.toml  docker-compose.yml  package.json
.centy/: .centy-manifest.json  config.json
.centy/issues/: 016ed645-c8f7-443c-af3e-621c2ed320e4.md  0196e279-36e0-4977-9c56-5ef3df4f62e0.md  04eae60e-e411-4b43-877b-47aca125d3be.md  0789927c-e601-4782-945a-002961b6c38e.md  0976eb07-55dc-43da-8316-64d4a17f1019.md  09f39374-aed8-4bcc-ae00-5be305039051.md  0ee2a4fb-b135-4be2-9452-4265872f1b3a.md  0f19bdad-90e7-43d7-a6d5-f70b8b1173e3.md  11deb735-6dac-4081-8463-11c0a2cacfe8.md  12210d3c-a837-4895-8064-79eda6898a28.md  129531ae-3fe5-454a-8537-a63a2bf0a00d.md  151def7c-6874-4540-9738-6b718d456cac.md  16c4462d-4afe-45d3-a0e8-a47c73ddc0d3.md  18426ce8-d416-4b2f-a5b8-35026e3186e8.md  19271453-75af-48c5-8122-cf7fd3ca574f.md  1970ee8d-fce3-4b0d-92a5-66def9775118.md  1a38ce53-1791-4c2e-b2c6-8b6a8d90bd92.md  1ad376d8-7f53-43d0-b057-ac65cb0e7827.md  1c6fa264-e661-4728-961c-05cb3dbdc837.md  1d4a3a65-d111-4af5-bdbc-5d06ee27cc32.md  1d4bbbb3-b93a-4d29-b872-43e323eec0d8.md  2130afb2-54e2-4258-9e0a-dbd19fe53b83.md  21458bf4-6f67-4ade-a83a-479658fdbd48.md  224b60f3-c9db-42c8-b8e8-8371cfbdc123.md  2252bb5e-9879-4fe3-919f-c57c8305072d.md  22e8adf5-a1d1-4c2c-a819-d009896a203b.md  23488a5c-7e38-4ba5-9220-bfa13f1d5e66.md  24368903-88bf-4e2d-a31b-60f7d8abb84a.md  25e059f1-b486-4522-b5bd-255c4b376246.md  260118dd-20a3-44db-b1c7-e63b2cc0a6ef.md  266284d5-9188-475f-a168-03f9eaf5e440.md  268d9641-344a-45b9-9575-26d07e1de2c9.md  2813a019-3550-46b1-8383-d02ad12c68aa.md  285988e1-0fba-466f-bc0a-54be409cdbdc.md  288f47ae-4858-472a-91b9-6aa33b60f288.md  2965cba6-29f0-4d15-b9d1-686f95dc391e.md  29b4bc68-a68b-4b6d-9b5e-ced3f2656e3a.md  29e33b8c-36b8-456e-b117-64b7e5d4763a.md  29fae371-8e20-4072-a777-56991c5eb196.md  2a01deff-5af0-4b39-a36f-474efe565bea.md  (+204 more)
.claude/: ralph-loop.local.md  settings.json
.github/workflows/: ci.yml  release.yml
.husky/: block-no-verify  pre-push
crates/tmux-gateway-core/: Cargo.toml
crates/tmux-gateway-core/src/: capture_pane.rs  commands.rs  create_session_with_windows.rs  ensure_session.rs  ensure_window.rs  error.rs  events.rs  executor.rs  health.rs  kill_pane.rs  kill_session.rs  kill_window.rs  lib.rs  list_panes.rs  list_windows.rs  move_window.rs  new_session.rs  new_window.rs  options.rs  rename_session.rs  rename_window.rs  resize_pane.rs  select_layout.rs  select_pane.rs  select_window.rs  send_keys.rs  (+7 more)
proto/: health.proto  tmux_gateway.proto
schemas/: openapi.json  schema.graphql  tmux_gateway.proto
src/: export_schemas.rs  lib.rs  main.rs  port_table.rs  preflight.rs
src/api/: middleware.rs  mod.rs  ws.rs
src/graphql/: handler.rs  mod.rs  schema.rs
src/grpc/: health_service.rs  mod.rs  tmux_gateway_service.rs
src/rest/: mod.rs  routes.rs
src/tmux/: commands.rs  kill_pane.rs  kill_session.rs  kill_window.rs  mod.rs  new_session.rs  sessions.rs
tests/: e2e.rs  graphql.rs  grpc.rs  rest.rs
tests/common/: mod.rs
(+10 files in other folders)
