[package]
name = "tmux-gateway"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
async-graphql = "7"
async-graphql-axum = "7"
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tonic-prost-build = "0.14"

[package.metadata.cargo-machete]
ignored = ["prost", "serde_json", "tonic-prost"]
