[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"

[package]
name = "tmux-gateway"
version = "0.1.0"
edition.workspace = true
default-run = "tmux-gateway"
license.workspace = true

[dependencies]
tmux-gateway-core = { path = "crates/tmux-gateway-core" }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
async-stream = "0.3"
futures-core = "0.3"
axum = { version = "0.8", features = ["ws"] }
async-graphql = "7"
async-graphql-axum = "7"
tonic = "0.14"
tonic-prost = "0.14"
tonic-health = "0.14"
tonic-reflection = "0.14"
prost = "0.14"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace", "request-id", "util", "propagate-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum"] }
dotenvy = "0.15.7"
anyhow = "1"
protox = "0.9.1"
prost-types = "0.14"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
governor = "0.10.4"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
serde_json = "1"
async-graphql = "7"
tonic = "0.14"

[package.metadata.cargo-machete]
ignored = ["prost", "serde_json", "tonic-prost", "utoipa-axum"]

[workspace.metadata.dylint]
libraries = [
    { git = "https://github.com/tupe12334/agent_dylint_lints" },
]
